--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -6,43 +6,52 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".transport.BluetoothActivity">
+
     <Button
         android:id="@+id/bt_support"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="btSupport"
-        android:text="判断是否支持"/>
+        android:text="判断是否支持" />
 
 
     <Button
         android:id="@+id/bt_start_blue"
-        app:layout_constraintLeft_toRightOf="@+id/bt_support"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="启用蓝牙"/>
+        android:text="启用蓝牙"
+        app:layout_constraintLeft_toRightOf="@+id/bt_support" />
 
     <Button
         android:id="@+id/bt_bond_devices"
-        app:layout_constraintLeft_toRightOf="@+id/bt_start_blue"
         android:layout_width="wrap_content"
-        android:onClick="btBondDevices"
         android:layout_height="wrap_content"
-        android:text="已配对的设备"/>
+        android:onClick="btBondDevices"
+        android:text="已配对的设备"
+        app:layout_constraintLeft_toRightOf="@+id/bt_start_blue" />
+
+
+    <Button
+        android:id="@+id/bt_restart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="btBondDevices"
+        android:text="重启蓝牙"
+        app:layout_constraintRight_toRightOf="parent" />
+
     <Button
         android:id="@+id/bt_search_blue"
-        app:layout_constraintTop_toBottomOf="@+id/bt_support"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="扫描设备"/>
+        android:text="扫描设备"
+        app:layout_constraintTop_toBottomOf="@+id/bt_support" />
 
 
     <ListView
-        app:layout_constraintTop_toBottomOf="@+id/bt_search_blue"
         android:id="@+id/lv_blue"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
-
-
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/bt_search_blue" />
 
 
 </android.support.constraint.ConstraintLayout>
